unpackaged/main/default/objects/Contact/fields/AllChannelBlocked__c.field-meta.xml
<CustomField>
    <fullName>AllChannelBlocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Channel Blocked</label>
    <type>Checkbox</type>
</CustomField>