unpackaged/main/default/objects/Contact/fields/BackInStock__c.field-meta.xml
<CustomField>
    <fullName>BackInStock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag Back in stock</description>
    <label>BackInStock</label>
    <type>Checkbox</type>
</CustomField>