unpackaged/main/default/objects/Contact/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>At least one purchase without warranty</description>
    <label>Buyer</label>
    <type>Checkbox</type>
</CustomField>