unpackaged/main/default/objects/Contact/fields/ClientAdvisor__c.field-meta.xml
<CustomField>
    <fullName>ClientAdvisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Client Advisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>