unpackaged/main/default/objects/Contact/fields/ClientAdvisorFullName__c.field-meta.xml
<CustomField>
    <fullName>ClientAdvisorFullName__c</fullName>
    <label>Client Advisor Full Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>