unpackaged/main/default/objects/Contact/fields/ClientAdvisorId__c.field-meta.xml
<CustomField>
    <fullName>ClientAdvisorId__c</fullName>
    <label>Client Advisor Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>