unpackaged/main/default/objects/Contact/fields/ClientType__c.field-meta.xml
<CustomField>
    <fullName>ClientType__c</fullName>
    <label>Client Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>PROSPECT_T</fullName>
                <label>Prospect (T)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>