unpackaged/main/default/objects/Contact/fields/CommunicationLocale__c.field-meta.xml
<CustomField>
    <fullName>CommunicationLocale__c</fullName>
    <formula>IF (NOT(ISBLANK (TEXT(Language__c))),TEXT( Language__c),
IF (NOT(ISBLANK(WebsiteLanguage__c)),WebsiteLanguage__c,&apos;Empty&apos;))
+&apos;_&apos;+ 
IF (NOT(ISBLANK (TEXT(Country__c))),TEXT( Country__c),
IF (NOT(ISBLANK(WebsiteCountry__c)),WebsiteCountry__c,&apos;Empty&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Communication Locale</label>
    <type>Text</type>
</CustomField>