unpackaged/main/default/objects/Contact/fields/Compagny__c.field-meta.xml
<CustomField>
    <fullName>Compagny__c</fullName>
    <label>Company</label>
    <length>50</length>
    <type>Text</type>
</CustomField>