unpackaged/main/default/objects/Contact/fields/Contactable__c.field-meta.xml
<CustomField>
    <fullName>Contactable__c</fullName>
    <formula>OR (ContactableByMailing__c   ,ContactableByPhone__c  ,ContactableByInstantMessaging__c ,ContactableByEmail__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contactable at least by one channel</inlineHelpText>
    <label>Contactable</label>
    <type>Checkbox</type>
</CustomField>