unpackaged/main/default/objects/Contact/fields/ContactableByEmail__c.field-meta.xml
<CustomField>
    <fullName>ContactableByEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contactable by Email</label>
    <type>Checkbox</type>
</CustomField>