unpackaged/main/default/objects/Contact/fields/ContactableByInstantMessaging__c.field-meta.xml
<CustomField>
    <fullName>ContactableByInstantMessaging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contactable by Instant Messaging</label>
    <type>Checkbox</type>
</CustomField>