unpackaged/main/default/objects/Contact/fields/ContactableByMailing__c.field-meta.xml
<CustomField>
    <fullName>ContactableByMailing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contactable by Mailing</label>
    <type>Checkbox</type>
</CustomField>