unpackaged/main/default/objects/Contact/fields/ContactableByPhone__c.field-meta.xml
<CustomField>
    <fullName>ContactableByPhone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contactable by Phone</label>
    <type>Checkbox</type>
</CustomField>