unpackaged/main/default/objects/Contact/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ABW</fullName>
                <label>Aruba</label>
            </value>
            <value>
                <fullName>AFG</fullName>
                <label>Afghanistan</label>
            </value>
            <value>
                <fullName>AGO</fullName>
                <label>Angola</label>
            </value>
            <value>
                <fullName>AIA</fullName>
                <label>Anguilla</label>
            </value>
            <value>
                <fullName>ALA</fullName>
                <label>Åland Islands</label>
            </value>
            <value>
                <fullName>ALB</fullName>
                <label>Albania</label>
            </value>
            <value>
                <fullName>AND</fullName>
                <label>Andorra</label>
            </value>
            <value>
                <fullName>ANT</fullName>
                <label>Netherlands Antilles</label>
            </value>
            <value>
                <fullName>ARE</fullName>
                <label>United Arab Emirates</label>
            </value>
            <value>
                <fullName>ARG</fullName>
                <label>Argentina</label>
            </value>
            <value>
                <fullName>ARM</fullName>
                <label>Armenia</label>
            </value>
            <value>
                <fullName>ASM</fullName>
                <label>American Samoa States</label>
            </value>
            <value>
                <fullName>ATA</fullName>
                <label>Antarctica</label>
            </value>
            <value>
                <fullName>ATF</fullName>
                <label>French Southern Territories</label>
            </value>
            <value>
                <fullName>ATG</fullName>
                <label>Antigua and Barbuda</label>
            </value>
            <value>
                <fullName>AUS</fullName>
                <label>Australia</label>
            </value>
            <value>
                <fullName>AUT</fullName>
                <label>Austria</label>
            </value>
            <value>
                <fullName>AZE</fullName>
                <label>Azerbaijan</label>
            </value>
            <value>
                <fullName>BDI</fullName>
                <label>Burundi</label>
            </value>
            <value>
                <fullName>BEL</fullName>
                <label>Belgium</label>
            </value>
            <value>
                <fullName>BEN</fullName>
                <label>Benin</label>
            </value>
            <value>
                <fullName>BFA</fullName>
                <label>Burkina Faso</label>
            </value>
            <value>
                <fullName>BGD</fullName>
                <label>Bangladesh</label>
            </value>
            <value>
                <fullName>BGR</fullName>
                <label>Bulgaria</label>
            </value>
            <value>
                <fullName>BHR</fullName>
                <label>Bahrain</label>
            </value>
            <value>
                <fullName>BHS</fullName>
                <label>Bahamas</label>
            </value>
            <value>
                <fullName>BIH</fullName>
                <label>Bosnia and Herzegovina</label>
            </value>
            <value>
                <fullName>BLM</fullName>
                <label>Saint Barthélemy</label>
            </value>
            <value>
                <fullName>BLR</fullName>
                <label>Belarus</label>
            </value>
            <value>
                <fullName>BLZ</fullName>
                <label>Belize</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>