unpackaged/main/default/objects/Contact/fields/CountryIso2__c.field-meta.xml
<CustomField>
    <fullName>CountryIso2__c</fullName>
    <label>CountryIso2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>