unpackaged/main/default/objects/Contact/fields/CreatedBySource__c.field-meta.xml
<CustomField>
    <fullName>CreatedBySource__c</fullName>
    <label>Created by source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>