unpackaged/main/default/objects/Contact/fields/CurrentCluster__c.field-meta.xml
<CustomField>
    <fullName>CurrentCluster__c</fullName>
    <label>Current Cluster</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Personal Shopper</fullName>
            </value>
            <value>
                <fullName>Collab</fullName>
            </value>
            <value>
                <fullName>Outlier</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Low First Timer</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Ambassador</fullName>
            </value>
            <value>
                <fullName>Inactive Client</fullName>
            </value>
            <value>
                <fullName>One Timer</fullName>
            </value>
            <value>
                <fullName>Highly Engaged</fullName>
            </value>
            <value>
                <fullName>Frequent Visitor</fullName>
            </value>
            <value>
                <fullName>High Experimenter</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>