unpackaged/main/default/objects/Contact/fields/DDC_Region__c.field-meta.xml
<CustomField>
    <fullName>DDC_Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US_AA</fullName>
                <label>Armed Forces - Americas</label>
            </value>
            <value>
                <fullName>CA_AB</fullName>
                <label>Alberta</label>
            </value>
            <value>
                <fullName>BR_AC</fullName>
                <label>Acre</label>
            </value>
            <value>
                <fullName>AU_ACT</fullName>
                <label>Australian Capital Territory</label>
            </value>
            <value>
                <fullName>US_AE</fullName>
                <label>Armed Forces - Europe</label>
            </value>
            <value>
                <fullName>JP_AICHI</fullName>
                <label>Aichi</label>
            </value>
            <value>
                <fullName>US_AK</fullName>
                <label>Alaska</label>
            </value>
            <value>
                <fullName>BR_AL</fullName>
                <label>Alagoas</label>
            </value>
            <value>
                <fullName>US_AL</fullName>
                <label>Alabama</label>
            </value>
            <value>
                <fullName>BR_AM</fullName>
                <label>Amazonas</label>
            </value>
            <value>
                <fullName>BR_AP</fullName>
                <label>Amapa</label>
            </value>
            <value>
                <fullName>US_AP</fullName>
                <label>Armed Forces - Pacific</label>
            </value>
            <value>
                <fullName>US_AR</fullName>
                <label>Arkansas</label>
            </value>
            <value>
                <fullName>US_AS</fullName>
                <label>American Samoa</label>
            </value>
            <value>
                <fullName>US_AZ</fullName>
                <label>Arizona</label>
            </value>
            <value>
                <fullName>BR_BA</fullName>
                <label>Bahia</label>
            </value>
            <value>
                <fullName>CA_BC</fullName>
                <label>British Columbia</label>
            </value>
            <value>
                <fullName>US_CA</fullName>
                <label>California</label>
            </value>
            <value>
                <fullName>BR_CE</fullName>
                <label>Ceara</label>
            </value>
            <value>
                <fullName>US_CO</fullName>
                <label>Colorado</label>
            </value>
            <value>
                <fullName>US_CT</fullName>
                <label>Connecticut</label>
            </value>
            <value>
                <fullName>US_DC</fullName>
                <label>District of Colombia</label>
            </value>
            <value>
                <fullName>US_DE</fullName>
                <label>Delaware</label>
            </value>
            <value>
                <fullName>BR_DF</fullName>
                <label>Distric Federal</label>
            </value>
            <value>
                <fullName>BR_ES</fullName>
                <label>Espirito Santo</label>
            </value>
            <value>
                <fullName>BR_EX</fullName>
                <label>Non Resident</label>
            </value>
            <value>
                <fullName>US_FL</fullName>
                <label>Florida</label>
            </value>
            <value>
                <fullName>US_FM</fullName>
                <label>Federated States of Micronesia</label>
            </value>
            <value>
                <fullName>JP_FUKUOKA</fullName>
                <label>Fukuoka</label>
            </value>
            <value>
                <fullName>US_GA</fullName>
                <label>Georgia</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>