unpackaged/main/default/objects/Contact/fields/Email_Bounce__c.field-meta.xml
<CustomField>
    <fullName>Email_Bounce__c</fullName>
    <formula>HardBounce__c &amp;&amp;  ContactableByEmail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Bounce</label>
    <type>Checkbox</type>
</CustomField>