unpackaged/main/default/objects/Contact/fields/EmailValid__c.field-meta.xml
<CustomField>
    <fullName>EmailValid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Valid</label>
    <type>Checkbox</type>
</CustomField>