unpackaged/main/default/objects/Contact/fields/EReceipt__c.field-meta.xml
<CustomField>
    <fullName>EReceipt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E Receipt</label>
    <type>Checkbox</type>
</CustomField>