unpackaged/main/default/objects/Contact/fields/FirstPurchaseDate__c.field-meta.xml
<CustomField>
    <fullName>FirstPurchaseDate__c</fullName>
    <label>First Purchase Date</label>
    <type>Date</type>
</CustomField>