unpackaged/main/default/objects/Contact/fields/FirstSecondTransactionInterval__c.field-meta.xml
<CustomField>
    <fullName>FirstSecondTransactionInterval__c</fullName>
    <label>First-Second Transaction Interval</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>