unpackaged/main/default/objects/Contact/fields/FiscalIdentificationNumber__c.field-meta.xml
<CustomField>
    <fullName>FiscalIdentificationNumber__c</fullName>
    <label>Fiscal Identification Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>