unpackaged/main/default/objects/Contact/fields/FraudDetection__c.field-meta.xml
<CustomField>
    <fullName>FraudDetection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fraud Detection</label>
    <type>Checkbox</type>
</CustomField>