unpackaged/main/default/objects/Contact/fields/FullAccount__c.field-meta.xml
<CustomField>
    <fullName>FullAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Full Account</label>
    <type>Checkbox</type>
</CustomField>