unpackaged/main/default/objects/Contact/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
                <label>Female</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Male</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>Neutral</label>
            </value>
            <value>
                <fullName>U</fullName>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>