unpackaged/main/default/objects/Contact/fields/Gifter__c.field-meta.xml
<CustomField>
    <fullName>Gifter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only gifter, mix, no gift</description>
    <label>Gifter</label>
    <type>Checkbox</type>
</CustomField>