unpackaged/main/default/objects/Contact/fields/isSFMC__c.field-meta.xml
<CustomField>
    <fullName>isSFMC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to know if the client should be synchronised to Marketing cloud</description>
    <label>isSFMC</label>
    <type>Checkbox</type>
</CustomField>