unpackaged/main/default/objects/Contact/fields/JobTitle__c.field-meta.xml
<CustomField>
    <fullName>JobTitle__c</fullName>
    <label>Job Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>