unpackaged/main/default/objects/Contact/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>gb</fullName>
                <label>English (GB)</label>
            </value>
            <value>
                <fullName>gr</fullName>
                <label>Greek</label>
            </value>
            <value>
                <fullName>jp</fullName>
                <label>Japanese</label>
            </value>
            <value>
                <fullName>us</fullName>
                <label>English (US)</label>
            </value>
            <value>
                <fullName>aa</fullName>
                <label>Afar</label>
            </value>
            <value>
                <fullName>ab</fullName>
                <label>Abkhazian</label>
            </value>
            <value>
                <fullName>ae</fullName>
                <label>Avestan</label>
            </value>
            <value>
                <fullName>af</fullName>
                <label>Afrikaans</label>
            </value>
            <value>
                <fullName>ak</fullName>
                <label>Akan</label>
            </value>
            <value>
                <fullName>am</fullName>
                <label>Amharic</label>
            </value>
            <value>
                <fullName>an</fullName>
                <label>Aragonese</label>
            </value>
            <value>
                <fullName>ar</fullName>
                <label>Arabic</label>
            </value>
            <value>
                <fullName>as</fullName>
                <label>Assamese</label>
            </value>
            <value>
                <fullName>av</fullName>
                <label>Avaric</label>
            </value>
            <value>
                <fullName>ay</fullName>
                <label>Aymara</label>
            </value>
            <value>
                <fullName>az</fullName>
                <label>Azerbaijani</label>
            </value>
            <value>
                <fullName>ba</fullName>
                <label>Bashkir</label>
            </value>
            <value>
                <fullName>be</fullName>
                <label>Belarusian</label>
            </value>
            <value>
                <fullName>bg</fullName>
                <label>Bulgarian</label>
            </value>
            <value>
                <fullName>bh</fullName>
                <label>Bihari</label>
            </value>
            <value>
                <fullName>bi</fullName>
                <label>Bislama</label>
            </value>
            <value>
                <fullName>bm</fullName>
                <label>Bambara</label>
            </value>
            <value>
                <fullName>bn</fullName>
                <label>Bengali</label>
            </value>
            <value>
                <fullName>bo</fullName>
                <label>Tibetan</label>
            </value>
            <value>
                <fullName>br</fullName>
                <label>Breton</label>
            </value>
            <value>
                <fullName>bs</fullName>
                <label>Bosnian</label>
            </value>
            <value>
                <fullName>ca</fullName>
                <label>Catalan</label>
            </value>
            <value>
                <fullName>ce</fullName>
                <label>Chechen</label>
            </value>
            <value>
                <fullName>ch</fullName>
                <label>Chamorro</label>
            </value>
            <value>
                <fullName>co</fullName>
                <label>Corsican</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>