unpackaged/main/default/objects/Contact/fields/Last_Transaction_SA__c.field-meta.xml
<CustomField>
    <fullName>Last_Transaction_SA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Transaction SA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TransactionContact</relationshipName>
    <type>Lookup</type>
</CustomField>