unpackaged/main/default/objects/Contact/fields/Last_Transaction_Store__c.field-meta.xml
<CustomField>
    <fullName>Last_Transaction_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Transaction Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Contacts (Last Transaction Store)</relationshipLabel>
    <relationshipName>Contacts3</relationshipName>
    <type>Lookup</type>
</CustomField>