unpackaged/main/default/objects/Contact/fields/LastContactDate__c.field-meta.xml
<CustomField>
    <fullName>LastContactDate__c</fullName>
    <label>Last Contact Date</label>
    <type>Date</type>
</CustomField>