unpackaged/main/default/objects/Contact/fields/LastPreviousTransactionInterval__c.field-meta.xml
<CustomField>
    <fullName>LastPreviousTransactionInterval__c</fullName>
    <label>Last-Previous Transaction Interval</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>