unpackaged/main/default/objects/Contact/fields/LastPurchaseDate__c.field-meta.xml
<CustomField>
    <fullName>LastPurchaseDate__c</fullName>
    <label>Last Purchase Date</label>
    <type>Date</type>
</CustomField>