unpackaged/main/default/objects/Contact/fields/LastUpdateHardBounce__c.field-meta.xml
<CustomField>
    <fullName>LastUpdateHardBounce__c</fullName>
    <label>Last Update Hard Bounce</label>
    <type>DateTime</type>
</CustomField>