unpackaged/main/default/objects/Contact/fields/LastUpdateNewsletterSubscription__c.field-meta.xml
<CustomField>
    <fullName>LastUpdateNewsletterSubscription__c</fullName>
    <label>Last Update Newsletter Subscription</label>
    <type>DateTime</type>
</CustomField>