unpackaged/main/default/objects/Contact/fields/LastUpdateOptinCalling__c.field-meta.xml
<CustomField>
    <fullName>LastUpdateOptinCalling__c</fullName>
    <label>Last Update Optin Phone</label>
    <type>DateTime</type>
</CustomField>