unpackaged/main/default/objects/Contact/fields/LastUpdateOptinEmailing__c.field-meta.xml
<CustomField>
    <fullName>LastUpdateOptinEmailing__c</fullName>
    <label>Last Update Optin Email</label>
    <type>DateTime</type>
</CustomField>