unpackaged/main/default/objects/Contact/fields/LastUpdateOptinInstantMessaging__c.field-meta.xml
<CustomField>
    <fullName>LastUpdateOptinInstantMessaging__c</fullName>
    <label>Last Update Optin Instant Messaging</label>
    <type>DateTime</type>
</CustomField>