unpackaged/main/default/objects/Contact/fields/LastUpdateOptinMailing__c.field-meta.xml
<CustomField>
    <fullName>LastUpdateOptinMailing__c</fullName>
    <label>Last Update Optin Post</label>
    <type>DateTime</type>
</CustomField>