unpackaged/main/default/objects/Contact/fields/LastUpdateOptoutCalling__c.field-meta.xml
<CustomField>
    <fullName>LastUpdateOptoutCalling__c</fullName>
    <label>Last Update Optout Phone</label>
    <type>DateTime</type>
</CustomField>