unpackaged/main/default/objects/Contact/fields/LastUpdateOptoutEmailing__c.field-meta.xml
<CustomField>
    <fullName>LastUpdateOptoutEmailing__c</fullName>
    <label>Last Update Optout Email</label>
    <type>DateTime</type>
</CustomField>