unpackaged/main/default/objects/Contact/fields/LastUpdateOptoutInstantMessaging__c.field-meta.xml
<CustomField>
    <fullName>LastUpdateOptoutInstantMessaging__c</fullName>
    <label>Last Update Optout Instant Messaging</label>
    <type>DateTime</type>
</CustomField>