unpackaged/main/default/objects/Contact/fields/LastUpdateOptoutMailing__c.field-meta.xml
<CustomField>
    <fullName>LastUpdateOptoutMailing__c</fullName>
    <label>Last Update Optout Post</label>
    <type>DateTime</type>
</CustomField>