unpackaged/main/default/objects/Contact/fields/LifeTimePurchaseAmount__c.field-meta.xml
<CustomField>
    <fullName>LifeTimePurchaseAmount__c</fullName>
    <label>Life Time Purchase Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>