unpackaged/main/default/objects/Contact/fields/LifetimePurchaseAmountAccessories__c.field-meta.xml
<CustomField>
    <fullName>LifetimePurchaseAmountAccessories__c</fullName>
    <label>Lifetime Purchase Amount Accessories</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>