unpackaged/main/default/objects/Contact/fields/LifetimePurchaseAmountLuggage__c.field-meta.xml
<CustomField>
    <fullName>LifetimePurchaseAmountLuggage__c</fullName>
    <label>Lifetime Purchase Amount Luggage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>