unpackaged/main/default/objects/Contact/fields/LifetimePurchaseAmountProducts__c.field-meta.xml
<CustomField>
    <fullName>LifetimePurchaseAmountProducts__c</fullName>
    <label>Lifetime Purchase Amount Products</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>