unpackaged/main/default/objects/Contact/fields/LifetimePurchaseAmountRepairs__c.field-meta.xml
<CustomField>
    <fullName>LifetimePurchaseAmountRepairs__c</fullName>
    <label>Lifetime Purchase Amount Repairs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>